apps/base/sintache/_sinatra-example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sintache
spec:
  selector:
    matchLabels:
      app: sintache
  template:
    metadata:
      labels:
        app: sintache
    spec:
      containers:
        - name: sintache
          image: img.hephy.pro/examples/mustache-sinatra:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9292
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: sintache
  namespace: app
spec:
  ports:
    - name: http
      port: 9393
  selector:
    app: sintache
