apps/base/sintache/_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sintache
spec:
  rules:
  - host: fix.me
    http:
      paths:
      - backend:
          service:
            name: sintache
            port:
              number: 9393
        path: /
        pathType: Prefix
